# react-native-libprisma

./: .gitignore  CONTRIBUTING.md  README.md  RNLibprisma.podspec  eslint.config.mjs  generate.js  package-lock.json  package.json  react-native.config.js  tsconfig.build.json  tsconfig.json  turbo.json
.github/actions/: setup.yml
.github/actions/setup/: action.yml
.github/workflows/: build-android.yml  build-grammers.yml  build-ios.yml  ci.yml  publish.yml
android/: CMakeLists.txt
android/src/main/java/com/athex/libprisma/: LibprismaModule.java  LibprismaPackage.java
android/src/main/jni/: LibprismaJNI.cpp
apple/: Libprisma.h  Libprisma.mm
common/cpp/: Libprisma.cpp  Libprisma.hpp
common/cpp/libprisma/: Highlight.h
components/: prism-fift.js  prism-func.js  prism-tact.js  prism-tl.js  prism-tlb.js
docs/: benchmark.md  implementation-coverage.md
example/: metro.config.js  package.json
example/src/app/: benchmark.tsx  index.tsx
example/src/code/: csharp.ts  objcpp.ts  rust.ts
examples/mobile/: app.json  package.json
examples/mobile/src/app/: _layout.tsx  benchmark.tsx  index.tsx  test-highlighter.tsx
examples/mobile/src/code/: cpp.ts  dart.ts  go.ts  index.ts  java.ts  kotlin.ts  php.ts  python.ts  ruby.ts  scala.ts  solidity.ts  swift.ts  typescript.ts
examples/mobile/src/utils/: benchmark.ts
react-native-libprisma/: .gitignore  CONTRIBUTING.md  Libprisma.podspec  README.md  nitro.json  package.json
react-native-libprisma/.github/ISSUE_TEMPLATE/: config.yml
react-native-libprisma/.github/workflows/: ci.yml  publish.yml
react-native-libprisma/android/: CMakeLists.txt  build.gradle
react-native-libprisma/android/src/main/cpp/: cpp-adapter.cpp
react-native-libprisma/android/src/main/java/com/margelo/nitro/libprisma/: LibprismaPackage.kt
react-native-libprisma/cpp/: EmbeddedGrammars.h  HybridLibprisma.cpp  HybridLibprisma.hpp  README.md
react-native-libprisma/cpp/libprisma/: LanguageTree.cpp
react-native-libprisma/example/: README.md  app.json  package.json
react-native-libprisma/example/android/: settings.gradle
react-native-libprisma/example/android/app/: build.gradle
react-native-libprisma/example/android/app/src/main/java/libprisma/example/: MainActivity.kt  MainApplication.kt
react-native-libprisma/example/android/app/src/main/res/values/: strings.xml
react-native-libprisma/example/ios/: Podfile
react-native-libprisma/example/ios/LibprismaExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
react-native-libprisma/example/ios/LibprismaExample.xcodeproj/: project.pbxproj
react-native-libprisma/example/ios/LibprismaExample.xcodeproj/xcshareddata/xcschemes/: LibprismaExample.xcscheme
react-native-libprisma/example/ios/LibprismaExample.xcworkspace/: contents.xcworkspacedata
react-native-libprisma/example/src/: App.tsx
react-native-libprisma/scripts/: embed-grammars.js
react-native-libprisma/src/: Libprisma.nitro.ts  index.tsx  themes.ts  utils.ts
scripts/: embed-grammars.js
src/: NativeLibprisma.ts  index.tsx  utils.ts
src/components/: index.ts
src/components/SyntaxHighlighter/: SyntaxHighlighter.tsx  index.ts
src/components/SyntaxHighlighter/components/: CopyButton.tsx  LineNumbers.tsx  LineRenderer.tsx  TokenRenderer.tsx  Toolbar.tsx
src/components/SyntaxHighlighter/renderers/: OptimizedRenderer.tsx  SimpleRenderer.tsx  VirtualizedRenderer.tsx
src/components/SyntaxHighlighter/styles/: designTokens.ts  themeUtils.ts
src/components/SyntaxHighlighter/utils/: getOptimalRenderMode.ts  splitTokensIntoLines.ts
windows/: .gitignore  CMakeLists.txt  RNLibprisma.sln
windows/RNLIbprisma/: LibprismaModule.cpp  RNLibprisma.vcxproj  ReactPackageProvider.h
